Worker Fishing Job and Look Helper FIshing uses a fake bobber and line and uses a read FishHook with fake player when doing item loot Look Helper now tests if worker is within X degrees of look target